# CS4220-Capstone-Audio-Source-Separation

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  conftest.py  launch.py  pyproject.toml  release-please-config.json  run_local_demo.bat  run_local_demo.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  reproducibility_report.yml
.github/workflows/: ci.yml  release-please.yml
.pytest_tmp/: malformed_protocol.yaml
artifacts/bench/: capstone_evidence_manifest.json  timing-smoke.json
artifacts/bench/trt/: build_log.json
artifacts/eval/: summary-smoke-happy.json  summary-smoke.json
artifacts/eval/demucs-smoke-run/: run_result.json  track_000.json
artifacts/eval/smoke-run/: run_result.json  track_000.json
artifacts/eval/smoke-run-happy/: run_result.json  track_000.json
artifacts/export/: umx-smoke.export.json  umx-smoke.onnx
artifacts/live/one-click/: live_runtime_result.json
artifacts/live/one-click-test/: live_runtime_result.json
artifacts/live/s02-failure-2kfM8J/: live_runtime_result.json
artifacts/schema/: eval_result.schema.json  live_runtime_result.schema.json  live_throughput_result.schema.json  mic_latency_result.schema.json  timing_result.schema.json
audio_source_separation_eval.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
configs/: environment.lock.md
data/musdb18/: README.md
docs/: README.md
docs/api/: README.md  contracts.md  live_core.md  mic_ingest.md  mp3_ingest.md  source_ingest.md  stem_router.md  umx_separator.md  video_ingest.md
docs/architecture/: README.md
docs/archive/: README.md
docs/config/: README.md
docs/ops/: RUNBOOK.md
docs/progress/: PROGRESS_REPORT.md
docs/scripts/: README.md  benchmark.md  eval.md  export.md  live.md  ui.md  verify.md
docs/tests/: README.md
docs/ui/: README.md
fixtures/audio/: README.md
fixtures/video/: README.md
live_runtime/: __init__.py  contracts.py  live_core.py  mic_ingest.py  mp3_ingest.py  source_ingest.py  stem_router.py  umx_separator.py  video_ingest.py
scripts/benchmark/: assemble_capstone_evidence.py  run_live_throughput.py  run_mic_latency.py  run_stage_timing.py
scripts/eval/: aggregate_metrics.py  eval_protocol.yaml  run_demucs_eval.py  run_umx_eval.py
scripts/export/: build_trt_engine.sh  export_umx_onnx.py
scripts/live/: run_live_separation.py
scripts/models/: bootstrap_umx_live_checkpoint.py
scripts/ui/: encode_artifact_path.py  live_demo.py  serve_compare_demo.py
scripts/verify/: m002_s01_check.sh  s01_check.sh  s02_check.sh  s03_check.sh  s04_check.sh  s05_check.sh  s06_check.sh  validate_json.py
tests/: test_launch.py
tests/benchmark/: test_live_throughput_result.py  test_mic_latency_result.py  test_timing_schema.py
tests/eval/: test_metric_aggregation.py  test_protocol_guardrails.py
tests/export/: test_export_pipeline_scripts.py  test_trt_build_log.py
tests/integration/: test_s06_evidence_bundle.py
tests/runtime/: test_live_runtime_contract.py  test_live_runtime_demucs.py  test_live_runtime_health.py  test_live_runtime_ingest.py  test_live_runtime_smoke.py  test_live_runtime_sources.py
tests/ui/: test_compare_demo_server.py  test_compare_ui.py  test_demo_api.py  test_encode_artifact_path.py
ui/compare/: app.js  fs-artifacts-scope.js  index.html  styles.css
ui/demo/: app.js  index.html  styles.css
ui/shared/: audio-render.js
(+269 files in other folders)
