[build-system]
requires = ["setuptools>=75.0.0", "wheel>=0.44.0"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-source-separation-eval"
version = "0.1.0"
description = "Reproducible evaluation and benchmarking harness for UMX proof workflows."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "PyYAML==6.0.2",
  "jsonschema==4.23.0",
  "imageio-ffmpeg==0.6.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.5",
  "pytest-cov==7.1.0",
  "playwright==1.54.0",
]
mic = [
  "sounddevice==0.5.1",
]
gpu = [
  "torch>=2.0.0",
  "torchaudio>=2.0.0",
  "openunmix>=1.2.1",
  "demucs==4.0.1",
  "matplotlib>=3.8",
  "librosa>=0.10",
  "PyAudio>=0.2.14",
  "pynvml>=11.0",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-config --strict-markers --cov=live_runtime --cov=scripts --cov-fail-under=80"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["live_runtime*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E402", "E501", "I001"]

[tool.coverage.run]
omit = [
  "live_runtime/umx_separator.py",
  "scripts/benchmark/run_live_throughput.py",
  "scripts/benchmark/run_mic_latency.py",
  "scripts/eval/aggregate_metrics.py",
  "scripts/eval/run_demucs_eval.py",
  "scripts/eval/run_umx_eval.py",
  "scripts/export/export_umx_onnx.py",
  "scripts/ui/live_demo.py",
]
